Bug 428970 - Dead pages show up in the page sidebar
Summary: Dead pages show up in the page sidebar
Status: RESOLVED FIXED
Alias: None
Product: plasma-systemmonitor
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-11 12:44 UTC by Vlad Zahorodnii
Modified: 2021-01-25 12:37 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (219.92 KB, image/png)
2020-11-11 12:44 UTC, Vlad Zahorodnii
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vlad Zahorodnii 2020-11-11 12:44:16 UTC
Created attachment 133228 [details]
screenshot

SUMMARY


STEPS TO REPRODUCE
1. Add a couple of pages
2. Remove the new pages
3. Restart Plasma System Monitor

OBSERVED RESULT
I see a couple of blank items in the page sidebar that most likely correspond to the removed pages

EXPECTED RESULT
No blank items

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 
plasma-systemmonitor: bec50608b7c4ddf64ffa441425ec6684c33f385b

ADDITIONAL INFORMATION

Contents of systemmonitorrc after removing pages and restarting plasma system monitor

```
[General]
height=914
pageOrder=overview.page,applications.page,history.page,processes.page,new_page.page,new_page1.page
width=1489
```

The config should not have "new_page.page,new_page1.page" because they were removed in the step 2.
Comment 1 Justin Zobel 2020-11-11 22:51:17 UTC
Confirmed on git master, blank space is left after removing two pages (my test).
Comment 2 David Redondo 2020-11-12 14:16:12 UTC
Can you reproduce it always? I just tried and couldn't reproduce it
Comment 3 Justin Zobel 2020-11-12 21:24:35 UTC
(In reply to David Redondo from comment #2)
> Can you reproduce it always? I just tried and couldn't reproduce it

I can't seem to reproduce it now but I believe I got updates (Neon Unstable) yesterday for all apps and libraries so the fix might have been in there.

Vlad can you retest?
Comment 4 Vlad Zahorodnii 2020-11-13 12:30:47 UTC
Nope, still can reproduce. (I'm at 2335fb88564f33be3b875e55808ddfaf6f93bac4)
Comment 5 Bug Janitor Service 2021-01-22 13:30:24 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libksysguard/-/merge_requests/110
Comment 6 Arjen Hiemstra 2021-01-25 11:42:22 UTC
Git commit bf2d0ece6979e5bf67445981f27c456c5e85d0b4 by Arjen Hiemstra.
Committed on 22/01/2021 at 13:30.
Pushed by ahiemstra into branch 'master'.

Prevent inadvertently writing config when destroying SensorFaceController

In certain cases, we may end up with a dirty config which we do not want
to store. So explicitly cleanup the config objects before destruction to
prevent them from being written.

M  +10   -0    faces/SensorFaceController.cpp

https://invent.kde.org/plasma/libksysguard/commit/bf2d0ece6979e5bf67445981f27c456c5e85d0b4
Comment 7 Arjen Hiemstra 2021-01-25 12:37:53 UTC
Git commit fea15a87388e60d719f113dbe0f2dd20a3f6b9c5 by Arjen Hiemstra.
Committed on 25/01/2021 at 12:37.
Pushed by ahiemstra into branch 'Plasma/5.21'.

Prevent inadvertently writing config when destroying SensorFaceController

In certain cases, we may end up with a dirty config which we do not want
to store. So explicitly cleanup the config objects before destruction to
prevent them from being written.


(cherry picked from commit bf2d0ece6979e5bf67445981f27c456c5e85d0b4)

M  +10   -0    faces/SensorFaceController.cpp

https://invent.kde.org/plasma/libksysguard/commit/fea15a87388e60d719f113dbe0f2dd20a3f6b9c5