Prevent inadvertently writing config when destroying SensorFaceController

In certain cases, we may end up with a dirty config which we do not want
to store. So explicitly cleanup the config objects before destruction to
prevent them from being written.

BUG:428970


(cherry picked from commit bf2d0ece6979e5bf67445981f27c456c5e85d0b4)